--- a/index.html
+++ b/index.html
@@ -567,6 +567,8 @@ function nextQuestion(){
       ? currentNumber
       : pokemon[currentNumber];
 
+  document.getElementById("number").style.color = "blue";
+
   answer.value="";
   answer.focus();
 }
@@ -699,6 +701,7 @@ if (
 </script>
 </body>
 </html>
+
 
 
 
