--- a/index.html
+++ b/index.html
@@ -81,7 +81,8 @@ select, input, button { width:100%; font-size:1.1em; padding:10px; margin:8px 0;
 
   <input id="answer" placeholder="答えを入力" autocomplete="off">
   <button onclick="checkAnswer()">判定</button>
-  <button onclick="giveUp()">ギブアップ</button>
+  <!-- 必要になったら戻して -->
+  <!-- <button onclick="giveUp()">ギブアップ</button> -->
 </div>
 </div>
 
@@ -709,6 +710,7 @@ if (
 </script>
 </body>
 </html>
+
 
 
 
